# code-coverage

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
cmake/: coverage.cmake
lib/: CMakeLists.txt  library.cpp  library.hpp  person.cpp  person.hpp
test/: CMakeLists.txt
test/lib/: test_lib.cpp
test/person/: test_person.cpp
